# wiza-rs

./: .gitlab-ci.yml  Cargo.toml  README.md  steps.yaml
.github/workflows/: release.yml
src/: executor.rs  main.rs  model.rs  tui.rs
