[package]
name = "wsl-wizard"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
ratatui = "0.28"
crossterm = "0.27"
dialoguer = "0.11"
once_cell = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
